<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@android:color/holo_green_dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/mainActivityTextStyle"
                android:text="@string/ma_textview_roll"
                android:id="@+id/ma_txtvw0_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/mainActivityTextStyle"
                android:hint="@string/ma_textview_result_hint"
                android:id="@+id/ma_txtvw1_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">


        <TextView
            style="@style/mainActivityTextStyle"
            android:text="@string/ma_txtview_label"
            android:id="@+id/ma_txtvw2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            style="@style/mainActivityTextStyle"
            android:id="@+id/ma_edittext0_usrinput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ma_edtxt_hint"
            android:inputType="numberDecimal"/>

    </LinearLayout>


        <Button
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:id="@+id/ma_btn0"
            android:drawableLeft="@drawable/ic_roll_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_btn0_text" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>